--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,22 @@
         android:textColor="@color/design_default_color_primary"
         android:textSize="35sp"/>
 
+    <ImageView
+        android:id="@+id/bannerImage"
+        android:layout_below="@id/mainTextHeader1"
+        android:layout_marginTop="20dp"
+        android:layout_width="190dp"
+        android:layout_height="150dp"
+        android:padding="2dp"
+        android:layout_marginBottom="60dp"
+        android:background="@color/black"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/logo"
+        />
+
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_below="@+id/mainTextHeader1"
+        android:layout_below="@+id/bannerImage"
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_margin="15dp"
@@ -47,6 +60,7 @@
         android:textAllCaps="false"
         android:textSize="20dp"
         android:textColor="@color/white"
+        android:onClick="onClickLogin"
         app:backgroundTint="@color/design_default_color_primary"
         android:layout_marginTop="20dp"
         />
