--- a/app/src/main/res/layout/activity_add_song.xml
+++ b/app/src/main/res/layout/activity_add_song.xml
@@ -1,9 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddSongActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/mainTextHeader1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Enter New Song Details"
+        android:layout_marginBottom="50dp"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="35sp"/>
+
+    <EditText
+        android:id="@+id/editTextName"
+        android:layout_below="@id/mainTextHeader1"
+        android:layout_width="match_parent"
+        android:hint="Enter Name"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_height="40dp" />
+
+    <EditText
+        android:id="@+id/editTextArtist"
+        android:layout_below="@id/editTextName"
+        android:layout_width="match_parent"
+        android:hint="Enter Artist"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_height="40dp" />
+
+
+    <EditText
+        android:id="@+id/editTextLength"
+        android:layout_width="match_parent"
+        android:inputType="number"
+        android:layout_below="@id/editTextArtist"
+        android:hint="Enter Length(in mins)"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_height="40dp"
+        />
+
+    <Button
+        android:id="@+id/button_upload"
+        android:layout_below="@+id/editTextLength"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="Upload mp3 File"
+        android:textAllCaps="false"
+        android:textSize="20dp"
+        app:backgroundTint="@color/design_default_color_primary"
+        android:layout_marginTop="25dp"
+        android:onClick="uploadSong"
+        />
+
+    <LinearLayout
+        android:id="@+id/linLayout"
+        android:layout_width="200dp"
+        android:layout_below="@+id/button_upload"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <TextView
+            android:id="@+id/tvAttachment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+    </LinearLayout>
+    <Button
+        android:id="@+id/button_addSong"
+        android:layout_below="@id/linLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="Add Song"
+        android:textAllCaps="false"
+        android:textSize="20dp"
+        app:backgroundTint="@color/design_default_color_primary"
+        android:layout_marginTop="50dp"
+        android:onClick="addSong"
+        />
+
+</RelativeLayout>
