--- a/app/src/main/res/layout/activity_songs.xml
+++ b/app/src/main/res/layout/activity_songs.xml
@@ -18,4 +18,11 @@
         android:textColor="@color/design_default_color_primary"
         android:textSize="35sp"/>
 
+    <fragment
+        android:name="com.example.songbytesapp.DisplaySongFragment"
+        android:id="@+id/fooFragment"
+        android:layout_below="@+id/mainTextHeader1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
