--- a/app/src/main/res/layout/activity_play_song.xml
+++ b/app/src/main/res/layout/activity_play_song.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light"
     tools:context=".PlaySongActivity">
 
     <TextView
@@ -17,11 +18,20 @@
         android:textColor="@color/design_default_color_primary"
         android:textSize="30sp"/>
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_below="@+id/playMainTextHeader"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:background="@drawable/download"/>
+
     <LinearLayout
         android:id="@+id/linLayout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_below="@+id/playMainTextHeader"
+        android:layout_below="@+id/imageView"
         android:layout_margin="20dp"
         android:background="@color/cardview_shadow_start_color"
         android:orientation="horizontal"
