--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -16,7 +16,8 @@
         android:gravity="center"
         android:text="Welcome Admin"
         android:textColor="@color/design_default_color_primary"
-        android:textSize="35sp"/>
+        android:textSize="35sp"
+        android:fontFamily="@font/bariol_bold"/>
 
     <Button
         android:id="@+id/button_add"
@@ -31,6 +32,7 @@
         android:textSize="20dp"
         app:backgroundTint="@color/design_default_color_primary"
         android:layout_marginTop="20dp"
-        android:onClick="openAddSongActivity"/>
+        android:onClick="openAddSongActivity"
+        android:fontFamily="@font/bariol_bold"/>
 
 </RelativeLayout>
