--- a/app/src/main/res/layout/activity_songs.xml
+++ b/app/src/main/res/layout/activity_songs.xml
@@ -17,7 +17,8 @@
         android:gravity="center"
         android:text="Welcome User"
         android:textColor="@color/design_default_color_primary"
-        android:textSize="35sp"/>
+        android:textSize="35sp"
+        android:fontFamily="@font/bariol_bold"/>
 
     <fragment
         android:name="com.example.songbytesapp.DisplaySongFragment"
