--- a/app/src/main/res/layout/activity_songs.xml
+++ b/app/src/main/res/layout/activity_songs.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,21 +8,21 @@
     tools:context=".SongsActivity">
 
     <TextView
-        android:id="@+id/mainTextHeader1"
+        android:id="@+id/songsUserMainHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="30dp"
         android:gravity="center"
-        android:text="Welcome User"
+        android:text="@string/userSongHeader"
         android:textColor="@color/design_default_color_primary"
         android:textSize="35sp"
         android:fontFamily="@font/bariol_bold"/>
 
     <fragment
         android:name="com.example.songbytesapp.DisplaySongFragment"
-        android:id="@+id/fooFragment"
-        android:layout_below="@+id/mainTextHeader1"
+        android:id="@+id/songsUserFrag"
+        android:layout_below="@+id/songsUserMainHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
