--- a/app/src/main/res/layout/activity_add_song.xml
+++ b/app/src/main/res/layout/activity_add_song.xml
@@ -8,71 +8,70 @@
     tools:context=".AddSongActivity">
 
     <TextView
-        android:id="@+id/mainTextHeader1"
+        android:id="@+id/addSongMainHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="Enter New Song Details"
+        android:text="@string/addSongHeader"
         android:layout_marginBottom="50dp"
         android:textColor="@color/design_default_color_primary"
         android:textSize="35sp"
         android:fontFamily="@font/bariol_bold"/>
 
     <EditText
-        android:id="@+id/editTextName"
-        android:layout_below="@id/mainTextHeader1"
+        android:id="@+id/addSongName"
+        android:layout_below="@id/addSongMainHeader"
         android:layout_width="match_parent"
-        android:hint="Enter Name"
+        android:hint="@string/addSongNameHint"
         android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"/>
 
     <EditText
-        android:id="@+id/editTextArtist"
-        android:layout_below="@id/editTextName"
+        android:id="@+id/addSongArtist"
+        android:layout_below="@id/addSongName"
         android:layout_width="match_parent"
-        android:hint="Enter Artist"
+        android:hint="@string/addSongArtistHint"
         android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"/>
 
 
     <EditText
-        android:id="@+id/editTextLength"
+        android:id="@+id/addSongLength"
         android:layout_width="match_parent"
         android:inputType="number"
-        android:layout_below="@id/editTextArtist"
-        android:hint="Enter Length(in mins)"
+        android:layout_below="@id/addSongArtist"
+        android:hint="@string/addSongLengthHint"
         android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_height="40dp"
-        />
+        android:layout_height="40dp"/>
 
     <Button
-        android:id="@+id/button_upload"
-        android:layout_below="@+id/editTextLength"
+        android:id="@+id/addSongUploadButton"
+        android:layout_below="@+id/addSongLength"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:text="Upload mp3 File"
+        android:text="@string/addSongUploadButtonText"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:backgroundTint="@color/design_default_color_primary"
         android:layout_marginTop="25dp"
-        android:onClick="uploadSong"
-        />
+        android:onClick="uploadSong"/>
 
     <LinearLayout
-        android:id="@+id/linLayout"
+        android:id="@+id/addSongLinLayout"
         android:layout_width="200dp"
-        android:layout_below="@+id/button_upload"
+        android:layout_below="@+id/addSongUploadButton"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
         android:orientation="vertical"
         android:gravity="center_horizontal">
+
         <TextView
             android:id="@+id/tvAttachment"
             android:layout_width="wrap_content"
@@ -80,17 +79,19 @@
             android:visibility="gone"
             app:drawableLeftCompat="@drawable/ic_upload"
             app:drawableStartCompat="@drawable/ic_upload"/>
+
     </LinearLayout>
+
     <Button
         android:id="@+id/button_addSong"
-        android:layout_below="@id/linLayout"
+        android:layout_below="@id/addSongLinLayout"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:text="Add Song"
+        android:text="@string/addSongAddButtonText"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:backgroundTint="@color/design_default_color_primary"
         android:layout_marginTop="50dp"
         android:onClick="addSong"
