--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,20 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/mainTextHeader1"
+        android:id="@+id/mainAppHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
         android:gravity="center"
-        android:text="Song Bytes"
+        android:text="@string/mainAppHeader"
         android:textColor="@color/design_default_color_primary"
         android:textSize="35sp"
         android:fontFamily="@font/bariol_bold"/>
 
     <ImageView
-        android:id="@+id/bannerImage"
-        android:layout_below="@id/mainTextHeader1"
+        android:id="@+id/mainBannerImage"
+        android:layout_below="@id/mainAppHeader"
         android:layout_marginTop="20dp"
         android:layout_width="190dp"
         android:layout_height="150dp"
@@ -33,34 +33,34 @@
         />
 
     <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_below="@+id/bannerImage"
+        android:id="@+id/mainEmail"
+        android:layout_below="@+id/mainBannerImage"
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_margin="15dp"
         android:layout_height="40dp"
         android:maxLines="1"
-        android:hint="Enter email"/>
+        android:hint="@string/mainEmailHint"/>
 
     <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_below="@+id/editTextEmail"
+        android:id="@+id/mainPassword"
+        android:layout_below="@+id/mainEmail"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_margin="15dp"
         android:layout_height="40dp"
         android:maxLines="1"
-        android:hint="Enter password"/>
+        android:hint="@string/mainPasswordHint"/>
 
     <Button
-        android:id="@+id/button_login"
+        android:id="@+id/mainLoginButton"
         android:layout_width="wrap_content"
-        android:layout_below="@+id/editTextPassword"
+        android:layout_below="@+id/mainPassword"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/mainLoginButtonText"
         android:textAllCaps="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/white"
         android:onClick="onClickLogin"
         app:backgroundTint="@color/design_default_color_primary"
