--- a/app/src/main/res/layout/activity_play_song.xml
+++ b/app/src/main/res/layout/activity_play_song.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -71,28 +70,21 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="5dp"
         android:gravity="center"
-        android:text="Song Details"
+        android:text="@string/playSongDetailsText"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
         android:fontFamily="@font/bariol_bold"/>
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="95dp"-->
-<!--        android:layout_below="@+id/playMainTextHeader2">-->
-
-        <TextView
-            android:layout_below="@+id/playMainTextHeader2"
-            android:id="@+id/playMainTextHeader3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center"
-            android:textColor="@color/design_default_color_primary"
-            android:textSize="20sp"
-            android:scrollbars = "vertical"
-            android:fontFamily="@font/bariol_bold"/>
-<!--    </ScrollView>-->
+    <TextView
+        android:layout_below="@+id/playMainTextHeader2"
+        android:id="@+id/playMainTextHeader3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="20sp"
+        android:scrollbars = "vertical"
+        android:fontFamily="@font/bariol_bold"/>
 
 </RelativeLayout>
