--- a/app/src/main/res/layout/fragment_display_song.xml
+++ b/app/src/main/res/layout/fragment_display_song.xml
@@ -7,7 +7,7 @@
     tools:context=".DisplaySongFragment">
 
     <TextView
-        android:id="@+id/mainTextHeader2"
+        android:id="@+id/fragMainTextHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -19,18 +19,18 @@
         android:fontFamily="@font/bariol_bold"/>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/fragSpinner"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/mainTextHeader2"
+        android:layout_below="@id/fragMainTextHeader"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/mainTextHeader3"
+        android:id="@+id/fragMainTextHeader1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/fragSpinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
         android:gravity="center"
@@ -40,10 +40,10 @@
         android:fontFamily="@font/bariol_bold"/>
 
     <TextView
-        android:id="@+id/songmainTextHeader4"
+        android:id="@+id/fragMainTextHeader2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/mainTextHeader3"
+        android:layout_below="@+id/fragMainTextHeader1"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
         android:gravity="center"
@@ -53,9 +53,9 @@
         android:fontFamily="@font/bariol_bold"/>
 
     <Button
-        android:id="@+id/button_select"
+        android:id="@+id/playSongButton"
         android:layout_width="wrap_content"
-        android:layout_below="@+id/songmainTextHeader4"
+        android:layout_below="@+id/fragMainTextHeader2"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:text="Play song"
