--- a/app/src/main/res/layout/activity_add_song.xml
+++ b/app/src/main/res/layout/activity_add_song.xml
@@ -59,7 +59,8 @@
         android:text="@string/addSongUploadButtonText"
         android:textAllCaps="false"
         android:textSize="20sp"
-        app:backgroundTint="@color/design_default_color_primary"
+        android:background="@drawable/custom_button"
+        android:padding="20dp"
         android:layout_marginTop="25dp"
         android:onClick="uploadSong"/>
 
@@ -92,7 +93,8 @@
         android:text="@string/addSongAddButtonText"
         android:textAllCaps="false"
         android:textSize="20sp"
-        app:backgroundTint="@color/design_default_color_primary"
+        android:background="@drawable/custom_button"
+        android:padding="20dp"
         android:layout_marginTop="50dp"
         android:onClick="addSong"
         android:fontFamily="@font/bariol_bold"/>
