--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -30,7 +30,8 @@
         android:text="@string/adminAddButtonText"
         android:textAllCaps="false"
         android:textSize="20sp"
-        app:backgroundTint="@color/design_default_color_primary"
+        android:background="@drawable/custom_button"
+        android:padding="20dp"
         android:layout_marginTop="20dp"
         android:onClick="openAddSongActivity"
         android:fontFamily="@font/bariol_bold"/>
