--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,8 @@
         android:textSize="20sp"
         android:textColor="@color/white"
         android:onClick="onClickLogin"
-        app:backgroundTint="@color/design_default_color_primary"
+        android:background="@drawable/custom_button"
+        android:padding="20dp"
         android:layout_marginTop="20dp"
         />
 
