--- a/app/src/main/res/layout/activity_play_song.xml
+++ b/app/src/main/res/layout/activity_play_song.xml
@@ -32,7 +32,7 @@
         android:layout_height="100dp"
         android:layout_below="@+id/imageView"
         android:layout_margin="20dp"
-        android:background="@color/cardview_shadow_start_color"
+        android:background="@drawable/custom_button"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:padding="10dp">
@@ -82,7 +82,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:gravity="center"
-        android:textColor="@color/design_default_color_primary"
+        android:background="@drawable/back"
+        android:textStyle="italic"
+        android:textColor="@color/purple_200"
         android:textSize="20sp"
         android:scrollbars = "vertical"
         android:fontFamily="@font/bariol_bold"/>
