--- a/app/src/main/res/layout/fragment_display_song.xml
+++ b/app/src/main/res/layout/fragment_display_song.xml
@@ -22,6 +22,8 @@
         android:id="@+id/fragSpinner"
         android:layout_marginTop="20dp"
         android:layout_below="@id/fragMainTextHeader"
+        android:background="@drawable/custom_button"
+        android:padding="5dp"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -45,10 +47,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/fragMainTextHeader1"
         android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/back"
         android:gravity="center"
+        android:textStyle="italic"
         android:text="Selected Song Details"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="@color/purple_200"
         android:textSize="20sp"
         android:fontFamily="@font/bariol_bold"/>
 
@@ -59,9 +63,10 @@
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:text="Play song"
-        android:background="@color/colorPrimary"
         android:textAllCaps="false"
         android:textSize="20dp"
+        android:background="@drawable/custom_button"
+        android:padding="20dp"
         android:textColor="@color/white"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/bariol_bold"/>
