--- a/app/src/main/res/layout/activity_play_song.xml
+++ b/app/src/main/res/layout/activity_play_song.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -60,7 +62,9 @@
             android:layout_height="match_parent"
             android:background="@android:drawable/ic_delete"
             android:onClick="musicstop" />
+
     </LinearLayout>
+
     <TextView
         android:id="@+id/playMainTextHeader2"
         android:layout_width="match_parent"
